Update website navigation and structure
- Added sequential navigation buttons to all pages for better user flow
- Removed duplicate 'Investor Presentation' from About the Business card
- Updated company story page: removed redundant line and linked to investor deck
- Removed 'Strategy & Planning' card from homepage
- Moved 'Content Strategy Framework' to About the Tech section
- Moved 'Team Structure' from About the Tech to Clinical Excellence section
- Fixed incomplete HTML in business-overview.html and market-analysis-presentation.html

--- a/analytics-dashboard.html
+++ b/analytics-dashboard.html
@@ -1721,5 +1721,12 @@
             }
         });
     </script>
+
+    <!-- Navigation -->
+    <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+        <a href="business-overview.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #ff9800, #ffcc80); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(255, 152, 0, 0.3);">
+            Explore Business Overview →
+        </a>
+    </div>
 </body>
 </html>
