--- a/company-story.html
+++ b/company-story.html
@@ -515,8 +515,14 @@
     <div class="closing-section">
         <div class="container">
             <h2>Every Love Story Deserves Support</h2>
-            <p>We believe that with the right understanding, care, and support, every relationship can flourish. TogetherWe isn't just technology—it's a love letter to love itself.</p>
+            <p>We believe that with the right understanding, care, and support, every relationship can flourish.</p>
             <p>Behind every algorithm is a commitment to helping couples discover their unique path to deeper connection.</p>
+        </div>
+        <!-- Navigation -->
+        <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+            <a href="investor-pitch-deck.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #ff9800, #ffcc80); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(255, 152, 0, 0.3);">
+                View Investor Deck →
+            </a>
         </div>
     </div>
 </body>
