--- a/development-roadmap.html
+++ b/development-roadmap.html
@@ -449,6 +449,13 @@
                 <p>Traditional relationship advice is one-size-fits-all. Our system understands that an anxious partner needs different support than an avoidant one, that sensual couples connect differently than energetic ones, and that every relationship has its own rhythm. By combining therapeutic expertise with AI personalization, we create experiences that feel like they were designed by someone who truly knows and loves each couple.</p>
             </div>
         </section>
+
+        <!-- Navigation -->
+        <div style="text-align: center; margin: 4rem 0 2rem 0;">
+            <a href="pricing-strategy.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #c597a4, #c69573); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(197, 151, 164, 0.3);">
+                Explore Our Pricing Plans →
+            </a>
+        </div>
     </div>
 </body>
 </html>
