--- a/security-architecture.html
+++ b/security-architecture.html
@@ -958,5 +958,12 @@
         // Auto-advance (optional)
         // setInterval(nextSlide, 10000); // Uncomment for auto-advance every 10 seconds
     </script>
+
+    <!-- Navigation -->
+    <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+        <a href="technical-integration-guide.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #f57c00, #ffb74d); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(245, 124, 0, 0.3);">
+            View Technical Integration →
+        </a>
+    </div>
 </body>
 </html>
