--- a/system-architecture-overview.html
+++ b/system-architecture-overview.html
@@ -530,6 +530,12 @@
             <p>CommandCore OS represents artificial intelligence that doesn't replace human connection but amplifies our capacity for healing. It remembers what we forget, sees patterns we miss, and helps couples build the skills to maintain lasting love.</p>
             <p style="margin-top: 1rem; font-style: italic;">The most sophisticated aspect isn't the memory architecture or neurotransmitter-agent model—it's how it helps couples remember the love that brought them together and develop the skills to keep that love alive.</p>
         </div>
+        <!-- Navigation -->
+        <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+            <a href="ai-technology-overview.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #f57c00, #ffb74d); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(245, 124, 0, 0.3);">
+                Discover AI Technology →
+            </a>
+        </div>
     </div>
 </body>
 </html>
