--- a/ai-technology-overview.html
+++ b/ai-technology-overview.html
@@ -679,6 +679,12 @@ optimizer = AdamW(lr=1e-4, weight_decay=0.01)
         <footer class="footer">
             <p>ADVANCING THE FRONTIER OF ARTIFICIAL INTELLIGENCE</p>
         </footer>
+        <!-- Navigation -->
+        <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+            <a href="content-strategy-presentation.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #f57c00, #ffb74d); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(245, 124, 0, 0.3);">
+                View Content Strategy →
+            </a>
+        </div>
     </div>
 </body>
 </html>
