--- a/business-overview.html
+++ b/business-overview.html
@@ -1531,4 +1531,15 @@
             `;
 
             // Update math details
-            
+            resultsDiv.style.display = 'block';
+        }
+    </script>
+
+    <!-- Navigation -->
+    <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+        <a href="market-analysis-presentation.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #ff9800, #ffcc80); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(255, 152, 0, 0.3);">
+            View Market Analysis →
+        </a>
+    </div>
+</body>
+</html>
