--- a/content-strategy-presentation.html
+++ b/content-strategy-presentation.html
@@ -899,5 +899,12 @@ triggering their attachment wounds?"
             }
         });
     </script>
+
+    <!-- Navigation -->
+    <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+        <a href="index.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #f57c00, #ffb74d); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(245, 124, 0, 0.3);">
+            Back to Home →
+        </a>
+    </div>
 </body>
 </html>
