--- a/market-analysis-presentation.html
+++ b/market-analysis-presentation.html
@@ -1564,4 +1564,14 @@
                     </div>
                 </div>
             </div>
-        </div
+        </div>
+
+        <!-- Navigation -->
+        <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+            <a href="company-story.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #ff9800, #ffcc80); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(255, 152, 0, 0.3);">
+                Discover Our Company Story →
+            </a>
+        </div>
+    </div>
+</body>
+</html>
