--- a/team-structure-overview.html
+++ b/team-structure-overview.html
@@ -564,6 +564,12 @@
                 </div>
             </div>
         </div>
+        <!-- Navigation -->
+        <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+            <a href="crisis-intervention-presentation.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #ff7043, #ff9800); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(255, 112, 67, 0.3);">
+                View Crisis Intervention Protocols →
+            </a>
+        </div>
     </div>
 </body>
 </html>
