--- a/technical-integration-guide.html
+++ b/technical-integration-guide.html
@@ -2473,5 +2473,12 @@ class UserExperienceTestSuite {
             updateProgressMetrics();
         }, 2000);
     </script>
+
+    <!-- Navigation -->
+    <div style="text-align: center; margin: 4rem 0 2rem 0; padding: 0 20px;">
+        <a href="system-architecture-overview.html" style="display: inline-block; padding: 18px 40px; background: linear-gradient(135deg, #f57c00, #ffb74d); color: white; text-decoration: none; border-radius: 50px; font-weight: 600; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 10px 30px rgba(245, 124, 0, 0.3);">
+            Explore System Architecture →
+        </a>
+    </div>
 </body>
 </html>
