Transform Context Engine page and create comprehensive icon system
Context Engine Updates:
- Rename from Content Injection Engine to Context Engine
- Complete high-tech redesign with futuristic aesthetic
- Add animated glowing borders and tech grid patterns
- Make buttons and dropdowns clearly interactive with outlines
- Cyan/tech color scheme matching sophisticated AI system

Icon System:
- Create comprehensive icon library combining custom SVG + standard icons
- Custom relationship/therapy icons (couple connection, daily check-in, etc.)
- Business/analytics icons for dashboard features
- Consistent design system with size variants and color classes
- Click-to-copy functionality for easy implementation

Home Button Consistency:
- Fix home buttons to match each page's theme
- Tech pages: Glowing cyber aesthetic
- Warm pages: Golden/orange tones
- Business pages: Professional dark glass
- No more generic white buttons sticking out

Home Page:
- Update Context Engine button name and location in tech card
- Properly positioned in About the Tech section

--- a/index.html
+++ b/index.html
@@ -480,6 +480,9 @@
             }
         }
     </style>
+    
+    <!-- Vercel Analytics -->
+    <script defer src="https://analytics.vercel-insights.com/v1/script.debug.js"></script>
 </head>
 <body>
     <div class="floating-shapes"></div>
@@ -585,7 +588,7 @@
                         AI Technology
                     </a>
                     <a href="content-strategy-presentation.html" class="page-link">
-                        Content Strategy Framework
+                        Context Engine
                     </a>
                 </div>
             </div>
