--- a/emotional-intelligence-demo.html
+++ b/emotional-intelligence-demo.html
@@ -339,12 +339,13 @@
             top: 20px;
             left: 20px;
             z-index: 9999;
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 248, 231, 0.95);
+            border: 2px solid rgba(255, 179, 71, 0.3);
             padding: 12px 20px;
             border-radius: 30px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 4px 20px rgba(255, 179, 71, 0.15);
             text-decoration: none;
-            color: #333;
+            color: #5d4037;
             font-weight: 600;
             display: inline-flex;
             align-items: center;
@@ -353,9 +354,11 @@
         }
         
         .simple-nav:hover {
-            background: #fff;
-            box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+            background: rgba(255, 179, 71, 0.1);
+            border-color: #ffb347;
+            box-shadow: 0 6px 30px rgba(255, 179, 71, 0.3);
             transform: translateY(-2px);
+            color: #4a2c20;
         }
         
         .simple-nav svg {
