--- a/investor-pitch-deck.html
+++ b/investor-pitch-deck.html
@@ -309,12 +309,14 @@
             top: 20px;
             left: 20px;
             z-index: 9999;
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             padding: 12px 20px;
             border-radius: 30px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             text-decoration: none;
-            color: #333;
+            color: #ffffff;
             font-weight: 600;
             display: inline-flex;
             align-items: center;
@@ -323,8 +325,9 @@
         }
         
         .simple-nav:hover {
-            background: #fff;
-            box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+            background: rgba(255, 255, 255, 0.1);
+            border-color: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 6px 30px rgba(0, 0, 0, 0.4);
             transform: translateY(-2px);
         }
         
